<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_snowheight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.koen.snow.Predictions_activity"
    android:background="@color/darkblue">

    <Button
        android:text="@string/saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="seeSpots"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/buttonshape"
        android:shadowColor="#4F90A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="25"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/buttonshape"
        android:shadowColor="#4F90A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="25"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <TextView
        android:text="@string/nearest"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/query"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_marginTop="14dp"
        android:id="@+id/grid"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nul"
            android:paddingRight="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twaalf"
            android:paddingLeft="30dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drie"
            android:paddingTop="7sp"
            android:textColor="@color/white"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zes"
            android:layout_row="2"
            android:layout_column="0"
            android:paddingTop="7sp"
            android:paddingRight="30dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/achtien"
            android:layout_row="2"
            android:layout_column="1"
            android:paddingLeft="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/negen"
            android:layout_row="3"
            android:layout_column="0"
            android:paddingTop="7sp"
            android:paddingRight="30dp"
            android:textColor="@color/white"/>
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twentyone"
            android:layout_row="3"
            android:layout_column="1"
            android:paddingLeft="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vijftien"
            android:layout_row="1"
            android:layout_column="1"
            android:paddingLeft="30dp"
            android:textColor="@color/white"/>

    </GridLayout>

    <TextView
        android:text="@string/chance_of_sunshine_98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sun"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <TextView
        android:text="@string/chance_of_snowfall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:layout_marginTop="33dp"
        android:textSize="20sp"
        android:layout_below="@+id/sun"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <TextView
        android:text="@string/temp_at_1200_5_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp12"
        android:textSize="16sp"
        android:layout_above="@+id/sun"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <TextView
        android:text="@string/min_temp_10_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/min"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/temp12"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <TextView
        android:text="@string/max_temp_10_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/max"
        android:textSize="16sp"
        android:layout_above="@+id/min"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

</RelativeLayout>
